tests/baselines/reference/mixedPropertyElementAccessAssignmentDeclaration(strict=true).errors.txt
mixedPropertyElementAccessAssignmentDeclaration.ts(2,5): error TS7034: Variable 'arr' implicitly has type 'any[]' in some locations where its type cannot be determined.
mixedPropertyElementAccessAssignmentDeclaration.ts(3,1): error TS7005: Variable 'arr' implicitly has an 'any[]' type.


==== mixedPropertyElementAccessAssignmentDeclaration.ts (2 errors) ====
    // Should not crash: #34642
    var arr = [];
        ~~~
!!! error TS7034: Variable 'arr' implicitly has type 'any[]' in some locations where its type cannot be determined.
    arr[0].prop[2] = {};
    ~~~
!!! error TS7005: Variable 'arr' implicitly has an 'any[]' type.
    